--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -45,4 +45,4 @@ jobs:
       run: |
         kubectl apply -f ./deployment.yaml
         kubectl get svc
-        kubectl get pods
+        kubectl get all
