testing the app again

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -44,4 +44,4 @@ jobs:
     - name: Deployment using Yaml file
       run: |
         kubectl apply -f ./deployment.yaml
-        kubectl get all
+        kubectl get svc
