--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: calculator-app
-        image: 042749349083.dkr.ecr.ap-south-1.amazonaws.com/calculator-app-repo/latest
+        image: 042749349083.dkr.ecr.ap-south-1.amazonaws.com/calculator-app-repo
         ports:
         - containerPort: 5000
 
